fixed text spacing and alignment in about

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -5,3 +5,7 @@
 .lead {
   color: white;
 }
+h3 {
+  width: 100%;
+  text-align: left;
+}
